fix pmd