@@ -6,6 +6,8 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.ai.embedding.EmbeddingModel;
 import org.springframework.ai.embedding.EmbeddingRequest;
 import org.springframework.ai.embedding.EmbeddingResponse;
@@ -19,6 +21,8 @@ import org.springframework.transaction.annotation.Transactional;
  */
 @Service
 public class SimpleEmbeddingService {
+
+  private static final Logger logger = LoggerFactory.getLogger(SimpleEmbeddingService.class);
 
   private final DocumentChunkRepository documentChunkRepository;
   private final EmbeddingModel embeddingModel;
@@ -44,7 +48,7 @@ public class SimpleEmbeddingService {
   @Transactional
   public DocumentChunk generateEmbedding(DocumentChunk chunk) {
     if (chunk == null || chunk.getTextContent() == null
-        || chunk.getTextContent().trim().isEmpty()) {
+        || chunk.getTextContent().isBlank()) {
       throw new IllegalArgumentException("Chunk or text content cannot be null or empty");
     }
 
@@ -68,8 +72,12 @@ public class SimpleEmbeddingService {
       // Set embedding on chunk for return value
       chunk.setEmbedding(embeddingArray);
       return chunk;
+    } catch (IllegalArgumentException e) {
+      throw e;
     } catch (Exception e) {
-      throw new RuntimeException("Failed to generate embedding for chunk: " + e.getMessage(), e);
+      throw new IllegalStateException(
+          "Failed to generate embedding for chunk: " + e.getMessage(), e
+      );
     }
   }
 
@@ -88,7 +96,7 @@ public class SimpleEmbeddingService {
     List<DocumentChunk> processedChunks = new ArrayList<>();
 
     for (DocumentChunk chunk : chunks) {
-      if (chunk.getTextContent() != null && !chunk.getTextContent().trim().isEmpty()) {
+      if (chunk.getTextContent() != null && !chunk.getTextContent().isBlank()) {
         try {
           float[] embeddingArray = generateOllamaEmbeddingArray(chunk.getTextContent());
 
@@ -97,9 +105,8 @@ public class SimpleEmbeddingService {
           chunk = documentChunkRepository.save(chunk);
           processedChunks.add(chunk);
         } catch (Exception e) {
-          System.err
-              .println("Failed to generate embedding for chunk " + chunk.getId() + ": "
-                  + e.getMessage());
+          logger.error("Failed to generate embedding for chunk {}: {}", chunk.getId(),
+              e.getMessage(), e);
           // Continue processing other chunks
         }
       }
@@ -119,23 +126,24 @@ public class SimpleEmbeddingService {
    */
   private float[] generateOllamaEmbeddingArray(String text) {
     try {
-      System.out.println(
-          "Generating embedding for text: " + text.substring(0, Math.min(100, text.length()))
-              + "...");
+      logger.debug("Generating embedding for text: {}...",
+          text.substring(0, Math.min(100, text.length())));
       EmbeddingRequest request = new EmbeddingRequest(List.of(text), null);
       EmbeddingResponse response = embeddingModel.call(request);
 
       if (response.getResults() != null && !response.getResults().isEmpty()) {
         float[] embedding = response.getResults().get(0).getOutput();
-        System.out.println(
-            "Successfully generated embedding with " + embedding.length + " dimensions");
+        logger.debug("Successfully generated embedding with {} dimensions", embedding.length);
         return embedding;
       } else {
-        throw new RuntimeException("No embedding result returned from Ollama");
+        throw new IllegalStateException("No embedding result returned from Ollama");
       }
+    } catch (IllegalStateException e) {
+      logger.error("Failed to generate Ollama embedding: {}", e.getMessage(), e);
+      throw e;
     } catch (Exception e) {
-      System.err.println("Failed to generate Ollama embedding: " + e.getMessage());
-      throw new RuntimeException("Failed to generate Ollama embedding: " + e.getMessage(), e);
+      logger.error("Failed to generate Ollama embedding: {}", e.getMessage(), e);
+      throw new IllegalStateException("Failed to generate Ollama embedding: " + e.getMessage(), e);
     }
   }
 
@@ -155,10 +163,10 @@ public class SimpleEmbeddingService {
     for (int i = 0; i < vector.length; i++) {
       vectorString.append(vector[i]);
       if (i < vector.length - 1) {
-        vectorString.append(",");
+        vectorString.append(',');
       }
     }
-    vectorString.append("]");
+    vectorString.append(']');
     return vectorString.toString();
   }
 
@@ -171,7 +179,7 @@ public class SimpleEmbeddingService {
    *         none found.
    */
   public List<DocumentChunk> findSimilarChunks(String queryText, int limit) {
-    if (queryText == null || queryText.trim().isEmpty()) {
+    if (queryText == null || queryText.isBlank()) {
       return new ArrayList<>();
     }
 
@@ -180,17 +188,17 @@ public class SimpleEmbeddingService {
       float[] queryEmbeddingArray = generateOllamaEmbeddingArray(queryText);
       String queryEmbedding = convertFloatArrayToVectorString(queryEmbeddingArray);
 
-      System.out.println("Search query embedding dimensions: " + queryEmbeddingArray.length);
-      System.out.println("Search query embedding preview: "
-          + queryEmbedding.substring(0, Math.min(50, queryEmbedding.length())) + "...");
+      logger.debug("Search query embedding dimensions: {}", queryEmbeddingArray.length);
+      logger.debug("Search query embedding preview: {}...",
+          queryEmbedding.substring(0, Math.min(50, queryEmbedding.length())));
 
       // Use PostgreSQL vector similarity search
       List<DocumentChunk> results = documentChunkRepository
           .findSimilarChunks(queryEmbedding, limit);
-      System.out.println("Found " + results.size() + " similar chunks");
+      logger.debug("Found {} similar chunks", results.size());
       return results;
     } catch (Exception e) {
-      System.err.println("Failed to find similar chunks: " + e.getMessage());
+      logger.error("Failed to find similar chunks: {}", e.getMessage(), e);
       return new ArrayList<>();
     }
   }
@@ -215,20 +223,20 @@ public class SimpleEmbeddingService {
     try {
       float[] queryEmbeddingArray = chunk.getEmbedding();
       String queryEmbedding = convertFloatArrayToVectorString(queryEmbeddingArray);
-      System.out.println("Chunk query embedding preview: "
-          + queryEmbedding.substring(0, Math.min(50, queryEmbedding.length())) + "...");
+      logger.debug("Chunk query embedding preview: {}...",
+          queryEmbedding.substring(0, Math.min(50, queryEmbedding.length())));
 
-      System.out.println("Chunk document ID: " + chunk.getDocument().getId());
+      logger.debug("Chunk document ID: {}", chunk.getDocument().getId());
 
-      System.out.println("Finding related chunks for chunk ID: " + chunk.getId());
+      logger.debug("Finding related chunks for chunk ID: {}", chunk.getId());
 
       // Use PostgreSQL vector similarity search
       List<DocumentChunk> results = documentChunkRepository.findRelatedChunks(
           chunk.getDocument().getId(), queryEmbedding, limit);
-      System.out.println("Found " + results.size() + " related chunks");
+      logger.debug("Found {} related chunks", results.size());
       return results;
     } catch (Exception e) {
-      System.err.println("Failed to find related chunks: " + e.getMessage());
+      logger.error("Failed to find related chunks: {}", e.getMessage(), e);
       return new ArrayList<>();
     }
   }
@@ -249,7 +257,7 @@ public class SimpleEmbeddingService {
     try {
       return calculateCosineSimilarity(embedding1, embedding2);
     } catch (Exception e) {
-      System.err.println("Failed to calculate similarity: " + e.getMessage());
+      logger.error("Failed to calculate similarity: {}", e.getMessage(), e);
       return 0.0;
     }
   }
